feat: Enhance project service with calendar integration and donation management
- Added JiraProperties for Jira integration configuration.
- Introduced ProjectCalendarProvisioningRequested event for project calendar provisioning.
- Implemented CalendarIntegrationException for handling calendar-related errors.
- Created DonationStatus enum to manage donation states.
- Developed ProjectAuthorizationService for project access control.
- Implemented DonationIntentService for managing donation intents and payment processing.
- Added ProjectCalendarLinkService for linking Google Calendar to projects.
- Created ProjectCalendarProvisioningListener to handle calendar provisioning events.
- Introduced StorageTransactionCoordinator for managing S3 storage transactions.
- Updated database schema for donations to include idempotency keys and statuses.
- Enhanced unit tests for various services including project authorization and calendar linking.
- Added GoogleCalendarConfigTest to validate Google Calendar configuration.